# RISC-V-qemu

./: MAINTAINERS
hw/acpi/: aml-build.c
hw/intc/: meson.build  riscv_aclint.c  riscv_aplic.c  riscv_imsic.c
hw/riscv/: Kconfig  meson.build  opentitan.c  riscv_smbios_type_44.c  sifive_e.c  sifive_u.c  spike.c  virt-acpi-build.c  virt.c
hw/smbios/: meson.build  smbios.c  smbios_build.h  smbios_type_44-stub.c  smbios_type_44.c
include/hw/acpi/: acpi-defs.h  aml-build.h
include/hw/firmware/: smbios.h
include/hw/riscv/: smbios.h  virt.h
